# trevm

./: Cargo.toml  README.md  Reducing_Size.md  Runtime-comparisons.md  laze-project.yml  precompile_wasm.rs  rebuild-all-payloads.sh
.github/workflows/: rebuild.yml
examples/: laze.yml
examples/.cargo/: config.toml
examples/async-bindings/: Cargo.toml  README.md  laze.yml  payload.cwasm  payload.pulley64f.cwasm
examples/async-bindings/src/: main.rs
examples/ble-scanner/: Cargo.toml  laze.yml  payload.cwasm
examples/ble-scanner/src/: main.rs
examples/coap-server-bindings/: Cargo.toml  README.md  client.diag  laze.yml  payload.cwasm  peers.yml
examples/coap-server-bindings/src/: main.rs
examples/gpio/: Cargo.toml  README.md  laze.yml  payload.cwasm
examples/gpio/src/: main.rs
examples/insecure-updates/: Cargo.toml  README.md  laze.yml  payload1.cwasm  payload2.cwasm  send_files.rs
examples/insecure-updates/src/: main.rs
examples/minimal-updates/: Cargo.toml  README.md  async-payload.cwasm  laze.yml  peers.yml
examples/simple-updates/: Cargo.toml  README.md  laze.yml  payload1.cwasm  payload2.cwasm
examples/simple-updates/src/: main.rs
examples/udp-bindings/: Cargo.toml  README.md  laze.yml  payload.cwasm
examples/udp-bindings/src/: main.rs
examples/updatable-async/: Cargo.toml  README.md  async-payload.cwasm  client.diag  laze.yml
examples/updatable-async/src/: main.rs
examples/wasm-bindings-async/: Cargo.toml  README.md  bindings-async.cwasm  laze.yml  payload.cwasm
payloads/.cargo/: config.toml
payloads/async-bindings/: Cargo.toml
payloads/async-bindings/src/: lib.rs
payloads/ble-scanner/: Cargo.toml
payloads/ble-scanner/src/: lib.rs
payloads/coap-server-bindings/: Cargo.toml
payloads/coap-server-bindings/src/: lib.rs
payloads/gpio/: Cargo.toml
payloads/gpio/src/: lib.rs
payloads/simple-updates-1/src/: lib.rs
payloads/simple-updates-2/src/: lib.rs
payloads/udp-bindings/: Cargo.toml
payloads/udp-bindings/src/: lib.rs
payloads/wasm-bindings-async/: Cargo.toml
payloads/wasm-bindings-async/.cargo/: config.toml
payloads/wasm-bindings/.cargo/: config.toml
payloads/wasm-bindings/src/: lib.rs
payloads/wasm-coap-interop/: Cargo.toml
payloads/wasm-coap-interop/.cargo/: config.toml
payloads/wasm-coap-interop/src/: lib.rs
src/ariel-os-bindings/: Cargo.toml
src/ariel-os-bindings/src/: lib.rs
src/ariel-os-bindings/src/wasm/: coap_server_guest.rs  gpio.rs  log.rs  mod.rs  rng.rs  time.rs  udp.rs
wit/: example-async.wit  example-ble-scanner.wit  example-coap-server.wit  example-gpio.wit  example-udp.wit  example-updates.wit
