[package]
name = "coap-server-bindings"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { workspace = true , features = ["coap", "alloc"] }
ariel-os-boards = { workspace = true }
ariel-os-bindings = { path = "../../src/ariel-os-bindings", features = ["log", "coap-server-guest"] }
embedded-nal-coap = "0.1.0-alpha.4"
coap-handler-implementations = "0.5.0"
coap-handler = "0.2.0"

wasmtime = { workspace = true, default-features = false, features = ["pulley", "runtime", "component-model"]}