[package]
name = "coap-server-bindings"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { workspace = true , features = ["coap", "alloc"] }
ariel-os-boards = { workspace = true }
ariel-os-bindings = { path = "../../src/ariel-os-bindings", features = ["log", "coap-server-guest"] }
embedded-nal-coap = "0.1.0-alpha.4"
coap-handler-implementations = "0.5.0"
coap-handler = "0.2.0"
coap-message = "0.3"
coap-numbers = "0.2"
# error_title allows sending out messages; error_request_body_error_position
# would also be welcome, but so far I don't think wasmtime exports that (plus
# it probably take a lot of source map magic to make real use of it).
coap-message-utils = { version = "0.3.0", features = [ "error_title" ] }

wasmtime = { workspace = true, default-features = false, features = ["pulley", "runtime", "component-model"]}
