[package]
name = "udp-bindings"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { workspace = true, features = ["time"] }
ariel-os-boards = { workspace = true }
ariel-os-bindings = { path = "../../src/ariel-os-bindings", features = [
  "udp",
  "log",
] }

wasmtime = { workspace = true, default-features = false, features = [
  "runtime",
  "pulley",
  "component-model",
] }
