[package]
name = "wasm-bindings-async"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { workspace = true, features = ["alloc", "time"] }
ariel-os-boards = { workspace = true }
ariel-os-bindings = { path = "../../src/ariel-os-bindings", features = ["log", "time", "rng"] }

wasmtime = { workspace = true, default-features = false, features = ["runtime", "pulley", "component-model", "async"] }
