[package]
name = "coap-server-component"
version = "0.1.0"
edition = "2024"

[dependencies]
# FIXME: CHANGE WHEN THE FIX IS RELEASED on GitHub
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen/", rev = "1fa44c80e59c582c1d5f23640d539de90d7f6a29" , default-features = false, features = ["macros"] }
talc = { version = "4.4.3", default-features = false, features = ["lock_api"]}
coap-handler-implementations = "0.5.0"
coap-handler = "0.2.0"
coap-message-implementations = "0.1.8"
coap-message = "0.3.2"
coap-numbers = "0.2.2"
coap-message-utils = "0.3.0"


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level="z"
codegen-units = 1
lto = "fat"
debug = false
strip = "symbols"
incremental = false
