[package]
name = "coap-server-component"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.47.0", default-features = false, features = [
  "macros",
] }
talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }
coap-handler-implementations = "0.5.0"
coap-handler = "0.2.0"
coap-message-implementations = "0.1.8"
coap-message = "0.3.2"
coap-numbers = "0.2.2"
coap-message-utils = "0.3.0"


[lib]
crate-type = ["cdylib"]
