[package]
name = "my-first-wasm-component"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.46.0" , default-features = false, features = ["macros"] }
talc = { version = "4.4.3", default-features = false,  features = ["lock_api"] }


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level="z"
codegen-units = 1
lto = "fat"
debug = false
strip = "symbols"
incremental = false
