[package]
name = "ariel-os-bindings"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
ariel-os-debug = { workspace = true, optional = true }
ariel-os-random = { workspace = true, optional = true }
ariel-os-embassy = { workspace = true, optional = true }
ariel-os-alloc = { workspace = true }
ariel-os-hal = { workspace = true, optional = true }

rand_core = { workspace = true, optional = true }

coap-request = { version = "0.2.0-alpha.2", optional = true }
coap-request-implementations = { version = "0.1.0-alpha.4", optional = true }
coap-handler-implementations = { version = "0.5.0", optional = true }
coap-message = { version = "0.3.2", optional = true }
coap-handler = { version = "0.2.0", optional = true }
coap-numbers = { version = "0.2.2", optional = true }
coap-message-implementations = { version = "0.1.8", optional = true }
coap-message-utils = { version = "0.3.0", optional = true }

wasmtime = { workspace = true, default-features = false, features = [
  "component-model",
] }
embassy-futures = { version = "0.1.1", default-features = false, optional = true }

[lints]
workspace = true

[features]
rng = ["dep:rand_core", "dep:ariel-os-random"]
udp = ["ariel-os-embassy/udp", "ariel-os-embassy/net", "dep:embassy-futures"]
time = ["ariel-os-embassy/time", "dep:embassy-futures"]
log = ["dep:ariel-os-debug"]
async = ["wasmtime/async"]
coap-server-guest = [
  "dep:coap-message",
  "dep:coap-message-implementations",
  "dep:coap-message-utils",
  "dep:coap-handler",
  "dep:coap-handler-implementations",
  "dep:coap-request",
  "dep:coap-request-implementations",
  "dep:coap-numbers",
]
gpio = ["dep:ariel-os-hal"]
